--- a/f-idlejs.html
+++ b/f-idlejs.html
@@ -1,5 +1,5 @@
 <link rel="import" href="../polymer/polymer.html">
-<link rel="import" href="../Idle.js/idlejs.html">
+<link rel="import" href="../idle.js/idlejs.html">
 <link rel="import" href="./finterface-idle-tracker.html">
 
 <!--
